Fix emote position to be vertically aligned with the text of the message

--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@
 
 .emote {
     margin-left: -8px;
+    margin-top: -8px;
 }
 
 .user_info{
